[project]
name = "local_regression"
version = "3.0.1"
authors = [
  {name = "Erkka Rinne", email = "erkka.rinne@fmi.fi"},
]
description = "Python module for creating localized linear regression models"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "scikit-learn",
    "pandas",
]

[tool.setuptools]
py-modules = ["local_regression"]
